envoy-gateway/certs/https.yaml
# export GW_IP=$(kubectl get svc eg -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
# curl -ik -v  -HHost:www.example.com --resolve "www.example.com:443:$GW_IP" https://www.example.com:443/echo
# curl --resolve "www.example.com:80:$GW_IP" http://www.example.com/echo
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      hostname: www.example.com
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: example-cert
        mode: Terminate
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-gtw-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
